--- a/canvasTest.html
+++ b/canvasTest.html
@@ -5,10 +5,12 @@
     <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>-->
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.4/angular.min.js"></script>
-    <script src="./js/jquery.upload-1.0.2.min.js" type="text/javascript"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js" type="text/javascript"></script>
-    <script src="./js/jquery.svg.js" type="text/javascript"></script>
-    <script src="./js/drag-and-drop.js" type="text/javascript"></script>
+    <script src="./js/jquery.upload-1.0.2.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
+    <script src="./js/jquery.svg.js"></script>
+    <script src="./js/drag-and-drop.js"></script>
+    <script src="./js/rgbcolor.js"></script>
+    <script src="./js/canvg.js"></script>
     <!--
     <script src="./js/raphael-min.js" type="text/javascript"></script>
     <script src="./js/raphael-svg-import.js" type="text/javascript"></script>
@@ -46,13 +48,15 @@
  -->
 
 
+
     
     <input id="imageSelector" name="imageSelector" type="file"/>
 <!--     <canvas id="mayugeCanvas" width="578" height="400"></canvas>
  -->
     <!-- <object data="./svg/golgo3.svg" type="image/svg+xml"></object> -->
     <div id="svgArea"></div>
-    <div id="svgArea2"></div>
+    <canvas id="canvasArea" style="display: none;"></canvas>
+    <div id="pngArea"><img/></div>
     <pre id="debug"></pre>
   </body>
 </html>
