--- a/about.html
+++ b/about.html
@@ -1,6 +1,58 @@
 <div class="span12" id="mainContent">
-	<dl>
-		<dt>まゆげジェネレーターとは</dt>
-		<dd>内容</dd>
-	</dl>
+	<div id="about">
+		<div class="row">
+			<div class="span9 offset1">
+			<div class="page-header">
+			  <h1>まゆげジェネレーター <small>写真にまゆげを。</small></h1>
+			</div>
+				<dl>
+					<dt><h3>まゆげジェネレーターとは</h3></dt>
+					<dd>
+						<p>写真やイラストにまゆげを合成できるWebサービスです。</p>
+						<p>人の顔を自動認識してまゆげを描いたり、自分の好きな位置にまゆげを描いたりできます。</p>
+						<p>まゆげの描画にはSVG（Scalable Vector Graphics 、スケーラブル・ベクター・グラフィックス）を使用しているため、大きなまゆげも小さなまゆげも美しく描けます。ただし、サーバまたはローカルに保存するときにはPNGファイルにエクスポートします。</p>
+					</dd>
+					<dt><h3>技術的なこと</h3></dt>
+					<dd>
+						<table class="table table-bordered">
+						  <caption>まゆげジェネレーターで使っている環境など</caption>
+						  <thead>
+						    <tr>
+						      <th>&nbsp;</th>
+						      <th>技術</th>
+						      <th>備考</th>
+						    </tr>
+						  </thead>
+						  <tbody>
+						    <tr>
+						      <td>サーバ</td>
+						      <td>CentOS/ Apache</td>
+						      <td>レンタルです。</td>
+						    </tr>
+						    <tr>
+						      <td>サーバサイド</td>
+						      <td>PHP5.3</td>
+						      <td>DBは使用していません。</td>
+						    </tr>
+						    <tr>
+						      <td>クライアントサイド</td>
+						      <td>jQuery/ AngularJS/ Twitter Bootstrap/ SVG/ Canvas</td>
+						      <td>jQuery plug-in各種</td>
+						    </tr>
+						  </tbody>
+						</table>
+						<p>まゆげジェネレーターはまゆげの描画を中心に、ほとんどの処理をクライアントサイドで行なっています。サーバサイドで行なっているのは<a href="http://detectface.com/" target="_blank">detectFace();</a>へのリクエスト中継とまゆげ画像の保存程度です。</p>	
+					</dd>
+					<dt><h3>動作検証ついて</h3></dt>
+					<dd>
+						<p>Google Chromeのみで動作確認しています（2013/03/20時点ではバージョン25を使用）。他のブラウザで動作するかは分かりません。</p>
+					</dd>
+					<dt><h3>顔認識について</h3></dt>
+					<dd>
+						<p><a href="http://detectface.com/" target="_blank">detectFace();</a>という顔認識Webサービスを利用しています。</p>
+					</dd>
+				</dl>
+			</div>
+		</div>
+	</div>
 </div>
