--- a/about.html
+++ b/about.html
@@ -13,6 +13,47 @@
 						<p>人の顔を自動認識してまゆげを描いたり、自分の好きな位置にまゆげを描いたりできます。</p>
 						<p>まゆげの描画にはSVG（Scalable Vector Graphics 、スケーラブル・ベクター・グラフィックス）を使用しているため、大きなまゆげも小さなまゆげも美しく描けます。ただし、サーバまたはローカルに保存するときにはPNGファイルにエクスポートします。</p>
 					</dd>
+					<dt><h3>仕様</h3></dt>
+					<dd>
+						<table class="table table-bordered">
+						  <caption>まゆげジェネレーターの仕様</caption>
+<!-- 						  <thead>
+						    <tr>
+						      <th>&nbsp;</th>
+						      <th>技術</th>
+						      <th>備考</th>
+						    </tr>
+						  </thead> -->
+						  <tbody>
+						    <tr>
+						      <td style="width: 100px;">アップロード可能な画像</td>
+						      <td style="width: 250px;">JPG(JPEG)/ PNG/ GIF</td>
+						      <td style="width: 150px;">大文字/小文字どちらも可。</td>
+						    </tr>
+						    <tr>
+						      <td>画像サイズ</td>
+						      <td>アップロードできる画像サイズに制限はありませんが、長辺が400pxを超えている場合は、400pxにリサイズされます。</td>
+						      <td>&nbsp;</td>
+						    </tr>
+						    <tr>
+						      <td>画像の保存</td>
+						      <td>
+						      	<p>自動保存または「サーバに保存」ボタンで画像をサーバに保存すると一意なURLが割り当てられます。まゆげの色の変更など画像編集をした場合、最後の状態だけが保存されます（サーバ上で画像が上書きされます）。途中の状態を残したいときは、「ローカルに保存」ボタンでパソコンに保存してください。</p>
+						      	<p>割り当てられたURLに後からアクセスすると保存されたPNG形式の画像が表示されます。PNG画像はまゆげの編集ができません。</p>
+						      </td>
+						      <td>保存処理中（画像が暗くなっているあいだ）はまゆげの編集（移動・追加・削除など）はできません。</td>
+						    </tr>
+						    <tr>
+						      <td>自動保存</td>
+						      <td>
+						      	<p>「自動保存する」がチェックされていると、次のタイミングで画像がサーバに保存されます。</p>
+						      	<p>アップロード完了/ まゆげ移動/ まゆげ追加/ まゆげ削除/ まゆげ色変更/ りんかく変更</p>
+						      </td>
+						      <td>保存処理中（画像が暗くなっているあいだ）はまゆげの編集（移動・追加・削除など）はできません。</td>
+						    </tr>
+						  </tbody>
+						</table>
+					</dd>
 					<dt><h3>技術的なこと</h3></dt>
 					<dd>
 						<table class="table table-bordered">
@@ -28,7 +69,7 @@
 						    <tr>
 						      <td>サーバ</td>
 						      <td>CentOS/ Apache</td>
-						      <td>レンタルです。</td>
+						      <td>レンタルサーバ</td>
 						    </tr>
 						    <tr>
 						      <td>サーバサイド</td>
@@ -46,7 +87,7 @@
 					</dd>
 					<dt><h3>動作検証ついて</h3></dt>
 					<dd>
-						<p>Google Chromeのみで動作確認しています（2013/03/20時点ではバージョン25を使用）。他のブラウザで動作するかは分かりません。</p>
+						<p>PC版Google Chromeのみで動作確認しています（2013/03/20時点ではバージョン25を使用）。他のブラウザで動作するかは分かりません。モバイルブラウザでも将来SVGファイルアップロードがサポートされたら動くかもしれません。</p>
 					</dd>
 					<dt><h3>顔認識について</h3></dt>
 					<dd>
