--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
 					</dd>
 					<dt><h3>動作検証ついて</h3></dt>
 					<dd>
-						<p>PC版Google Chromeのみで動作確認しています（2013/03/20時点ではバージョン25を使用）。他のブラウザで動作するかは分かりません。モバイルブラウザでも将来SVGファイルアップロードがサポートされたら動くかもしれません。</p>
+						<p>PC版Google Chromeのみで動作確認しています（2013/03/20時点ではバージョン25を使用）。他のブラウザで動作するかは分かりません。モバイルブラウザでも将来SVGやファイルアップロードがサポートされたら動くかもしれません。</p>
 					</dd>
 					<dt><h3>顔認識について</h3></dt>
 					<dd>
