保存時のファイル名をsha1デコードに変更したり、ファイルサイズチェックを入れたり

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 						    </tr>
 						    <tr>
 						      <td>画像サイズ</td>
-						      <td>アップロードできる画像サイズに制限はありませんが、長辺が400pxを超えている場合は、400pxにリサイズされます。</td>
+						      <td>2MBを超える画像はアップロードできません。また長辺が400pxを超えている場合は、400pxにリサイズされます。</td>
 						      <td>&nbsp;</td>
 						    </tr>
 						    <tr>
