--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 						<img src="/img/sample.png" style="float:right;" class="span4 img-polaroid"/>
 						<p>写真やイラストにまゆげを合成できるWebサービスです。</p>
 						<p>人の顔を自動認識してまゆげを描いたり、自分の好きな位置にまゆげを描いたりできます。</p>
-						<p>まゆげの描画にはSVG（Scalable Vector Graphics 、スケーラブル・ベクター・グラフィックス）を使用しているため、大きなまゆげも小さなまゆげも美しく描けます。ただし、サーバまたはローカルに保存するときにはPNGファイルにエクスポートします。</p>
+						<p>まゆげの描画にはSVG（Scalable Vector Graphics 、スケーラブル・ベクター・グラフィックス）を使用しているため、大きなまゆげも小さなまゆげも美しく描けます。サーバまたはローカルに保存するときにはPNGファイルにエクスポートします。</p>
 					</dd>
 					<dt><h3>仕様</h3></dt>
 					<dd>
@@ -46,7 +46,7 @@
 						    <tr>
 						      <td>自動保存</td>
 						      <td>
-						      	<p>「自動保存する」がチェックされていると、次のタイミングで画像がサーバに保存されます。</p>
+						      	<p>「自動保存する」がチェックされていると、下記のタイミングで画像がサーバに保存されます。</p>
 						      	<p>アップロード完了/ まゆげ移動/ まゆげ追加/ まゆげ削除/ まゆげ色変更/ りんかく変更</p>
 						      </td>
 						      <td>保存処理中（画像が暗くなっているあいだ）はまゆげの編集（移動・追加・削除など）はできません。</td>
