--- a/about.html
+++ b/about.html
@@ -13,6 +13,20 @@
 						<p>人の顔を自動認識してまゆげを描いたり、自分の好きな位置にまゆげを描いたりできます。</p>
 						<p>まゆげの描画にはSVG（Scalable Vector Graphics 、スケーラブル・ベクター・グラフィックス）を使用しているため、大きなまゆげも小さなまゆげも美しく描けます。サーバまたはローカルに保存するときにはPNGファイルにエクスポートします。</p>
 					</dd>
+					<dt><h3>使いかた</h3></dt>
+					<dd>
+						<ol>
+							<li><p><a class="btn" href="javascript:void(0)">ファイル選択</a>からファイルを選ぶとファイルが読み込まれます。サイズの大きいファイルは読み込みに時間がかかります。</p>
+								<p>自動で顔認識してまゆげを描きたい場合は、「顔認識する」にチェックを入れてからファイルを選びます。顔認識する場合は、まゆげの形も選べます。</p></li>
+							<li><p>「自動保存」をチェックしておくと、アップロード完了時やまゆげの編集後に画像がサーバに保存されます。</p></li>
+							<li><p>ファイルの読み込みが終わると、画像が画面の左側に表示されます。</p></li>
+							<li><p>まゆげの形や色、りんかくを選んで画像上でドラッグ＆ドロップすると、まゆげが描かれます。</p></li>
+							<li><p>まゆげはドラッグで移動できます。ダブルクリックすると削除出来ます。</p></li>
+							<li><p>形や色を選んで横の<a class="btn" href="javascript:void(0)">全まゆに適用</a>を押すと既存のまゆげがその形や色になります。</p></li>
+							<li><p><a class="btn" href="javascript:void(0)">ローカルに保存</a>を押すとPNG形式の画像が別ウィンドウで表示されます。右クリックで保存してください。</p></li>
+							<li><p><a class="btn" href="javascript:void(0)">サーバに保存</a>を押すとPNG形式の画像がサーバにアップロードされます。</p></li>
+						</ol>
+					</dd>
 					<dt><h3>仕様</h3></dt>
 					<dd>
 						<table class="table table-bordered">
