TODC bootstrapなどテーマをいくつか追加

--- a/about.html
+++ b/about.html
@@ -3,10 +3,10 @@
 		<div class="row">
 			<div class="span9 offset1">
 			<div class="page-header">
-			  <h1>まゆげジェネレーター　<small>写真にまゆげを。</small></h1>
+			  <h1>まゆげジェネレータ　<small>写真にまゆげを。</small></h1>
 			</div>
 				<dl>
-					<dt><h3>まゆげジェネレーターとは</h3></dt>
+					<dt><h3>まゆげジェネレータとは</h3></dt>
 					<dd>
 						<img src="/img/sample.png" style="float:right;" class="span4 img-polaroid"/>
 						<p>写真やイラストにまゆげを合成できるWebサービスです。</p>
@@ -30,7 +30,7 @@
 					<dt><h3>仕様</h3></dt>
 					<dd>
 						<table class="table table-bordered">
-						  <caption>まゆげジェネレーターの仕様</caption>
+						  <caption>まゆげジェネレータの仕様</caption>
 <!-- 						  <thead>
 						    <tr>
 						      <th>&nbsp;</th>
@@ -71,7 +71,7 @@
 					<dt><h3>技術的なこと</h3></dt>
 					<dd>
 						<table class="table table-bordered">
-						  <caption>まゆげジェネレーターで使っている環境など</caption>
+						  <caption>まゆげジェネレータで使っている環境など</caption>
 						  <thead>
 						    <tr>
 						      <th>&nbsp;</th>
@@ -97,7 +97,7 @@
 						    </tr>
 						  </tbody>
 						</table>
-						<p>まゆげジェネレーターはまゆげの描画を中心に、ほとんどの処理をクライアントサイドで行なっています。サーバサイドで行なっているのは<a href="http://detectface.com/" target="_blank">detectFace();</a>へのリクエスト中継とまゆげ画像の保存程度です。</p>	
+						<p>まゆげジェネレータはまゆげの描画を中心に、ほとんどの処理をクライアントサイドで行なっています。サーバサイドで行なっているのは<a href="http://detectface.com/" target="_blank">detectFace();</a>へのリクエスト中継とまゆげ画像の保存程度です。</p>	
 					</dd>
 					<dt><h3>動作検証ついて</h3></dt>
 					<dd>
