--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 						<img src="/img/sample.png" style="float:right;" class="span4 img-polaroid"/>
 						<p>写真やイラストにまゆげを合成できるWebサービスです。</p>
 						<p>人の顔を自動認識してまゆげを描いたり、自分の好きな位置にまゆげを描いたりできます。</p>
-						<p>まゆげの描画にはSVG（Scalable Vector Graphics 、スケーラブル・ベクター・グラフィックス）を使用しているため、大きなまゆげも小さなまゆげも美しく描けます。ただし、サーバまたはローカルに保存するときにはPNGファイルにエクスポートします。</p>
+						<p>まゆげの描画にはSVG（Scalable Vector Graphics 、スケーラブル・ベクター・グラフィックス）を使用しているため、大きなまゆげも小さなまゆげも美しく描けます。ただし、サーバまたはローカルに保存するときにはPNGファイルに変換します。</p>
 					</dd>
 					<dt><h3>仕様</h3></dt>
 					<dd>
