--- a/about.html
+++ b/about.html
@@ -11,13 +11,13 @@
 						<img src="/img/sample.png" style="float:right;" class="span4 img-polaroid"/>
 						<p>写真やイラストにまゆげを合成できるWebサービスです。</p>
 						<p>人の顔を自動認識してまゆげを描いたり、自分の好きな位置にまゆげを描いたりできます。</p>
-						<p>まゆげの描画にはSVG（Scalable Vector Graphics 、スケーラブル・ベクター・グラフィックス）を使用しているため、大きなまゆげも小さなまゆげも美しく描けます。サーバまたはローカルに保存するときにはPNGファイルにエクスポートします。</p>
+						<p>まゆげの描画にはSVG（Scalable Vector Graphics 、スケーラブル・ベクター・グラフィックス）を使用しているため、大きなまゆげも小さなまゆげも美しく描けます。サーバまたはローカルに保存するときにはPNGファイルに変換します。</p>
 					</dd>
 					<dt><h3>使いかた</h3></dt>
 					<dd>
 						<ol>
 							<li><p><a class="btn" href="javascript:void(0)">ファイル選択</a>からファイルを選ぶとファイルが読み込まれます。サイズの大きいファイルは読み込みに時間がかかります。</p>
-								<p>自動で顔認識してまゆげを描きたい場合は、「顔認識する」にチェックを入れてからファイルを選びます。顔認識する場合は、まゆげの形も選べます。</p></li>
+								<p>自動で顔認識してまゆげを描きたい場合は、「顔認識する」にチェックを入れてからファイルを選びます。自動で描くまゆげの形や色を選んでおくこともできます。</p></li>
 							<li><p>「自動保存」をチェックしておくと、アップロード完了時やまゆげの編集後に画像がサーバに保存されます。</p></li>
 							<li><p>ファイルの読み込みが終わると、画像が画面の左側に表示されます。</p></li>
 							<li><p>まゆげの形や色、りんかくを選んで画像上でドラッグ＆ドロップすると、まゆげが描かれます。</p></li>
