--- a/about.html
+++ b/about.html
@@ -6,15 +6,17 @@
 			  <h1>まゆげジェネレータ　<small>写真にまゆげを。</small></h1>
 			</div>
 				<dl>
+					<img src="/img/sample.png" style="float:right;" class="span4 img-polaroid"/>
 					<dt><h3>まゆげジェネレータとは</h3></dt>
 					<dd>
-						<img src="/img/sample.png" style="float:right;" class="span4 img-polaroid"/>
 						<p>写真やイラストにまゆげを合成できるWebサービスです。</p>
 						<p>人の顔を自動認識してまゆげを描いたり、自分の好きな位置にまゆげを描いたりできます。</p>
 						<p>まゆげの描画にはSVG（Scalable Vector Graphics 、スケーラブル・ベクター・グラフィックス）を使用しているため、大きなまゆげも小さなまゆげも美しく描けます。サーバまたはローカルに保存するときにはPNGファイルに変換します。</p>
 					</dd>
+					<div class="clearfix"></div>
 					<dt><h3>使いかた</h3></dt>
 					<dd>
+						<img src="/img/howto.png" style="float: left; margin: 0 30px 10px 0;" class="span5 img-polaroid">
 						<ol>
 							<li><p><a class="btn" href="javascript:void(0)">ファイル選択</a>からファイルを選ぶとファイルが読み込まれます。サイズの大きいファイルは読み込みに時間がかかります。</p>
 								<p>自動で顔認識してまゆげを描きたい場合は、「顔認識する」にチェックを入れてからファイルを選びます。自動で描くまゆげの形や色を選んでおくこともできます。</p></li>
@@ -26,6 +28,11 @@
 							<li><p><a class="btn" href="javascript:void(0)">ローカルに保存</a>を押すとPNG形式の画像が別ウィンドウで表示されます。右クリックで保存してください。</p></li>
 							<li><p><a class="btn" href="javascript:void(0)">サーバに保存</a>を押すとPNG形式の画像がサーバにアップロードされます。</p></li>
 						</ol>
+					</dd>
+					<dt><h3>注意事項など</h3></dt>
+					<dd>
+						<p>当サイトの内容やサービスの仕様は予告なく変更する場合があります。</p>
+						<p>サーバに保存した画像は予告なく削除する場合があります。</p>
 					</dd>
 					<dt><h3>仕様</h3></dt>
 					<dd>
